--- a/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation.Avalonia/Presentation.Avalonia.csproj
+++ b/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation.Avalonia/Presentation.Avalonia.csproj
@@ -21,4 +21,8 @@
         </PackageReference>
         <PackageReference Include="CommunityToolkit.Mvvm"/>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Business\Business.csproj" />
+    </ItemGroup>
 </Project>
