--- a/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation.Console/Presentation.Console.csproj
+++ b/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation.Console/Presentation.Console.csproj
@@ -7,4 +7,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Business\Business.csproj" />
+    </ItemGroup>
+
 </Project>
