Created a new console project, since .Console, in it's own namespace Presentation.Console.Dialogs, ended up corrupting all the usual Console.Write/WriteLine/ReadKey/ReadLine etc. So had to delete the old, and create a new.

--- a/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation.Console/Presentation.Console.csproj
+++ b/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation.Console/Presentation.Console.csproj
@@ -8,11 +8,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Business\Business.csproj" />
+      <ProjectReference Include="..\Data\Data.csproj" />
     </ItemGroup>
 
 </Project>
