--- a/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation_Console/Presentation_Console.csproj
+++ b/week_02/learn_006_entity_framework_core/Presentation.Avalonia/Presentation_Console/Presentation_Console.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\Business\Business.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
