Interface created for the CustomerDialog, changed the database location to another folder, and added an if statement that changes the location based on operating system.

--- a/week_02/exercise_003_lektionstillfälle/Presentation_WebApi/appsettings.json
+++ b/week_02/exercise_003_lektionstillfälle/Presentation_WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/home/querzion/RiderProjects/yh.webut.kurser.datalagring/week_02/exercise_003_lektionstillfälle/Infrastructure/Contexts/SQLite_Database.db"
+    "DefaultConnection": "Data Source=/home/querzion/Projects/Database/SQLite_Database.db"
   }
 }
